<resources>

    <string name="app_name">nba-team-viewer</string>

    <!-- Menu item Strings -->
    <string name="action_settings">Settings</string>
    <string name="sort_teams_by">Sort teams by…</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="wins_label">Wins</string>
    <string name="loses_label">Loses</string>

    <!-- Strings used for fragments for navigation -->
    <string name="teams_fragment_label">Teams Fragment</string>
    <string name="players_fragment_label">Players Fragment</string>

    <!-- Strings used to describe teams and players fields -->
    <string name="nba_league_label">NBA Leaderboard</string>
    <string name="player_number_label">Number</string>
    <string name="player_position_label">Position</string>
    <string name="player_name_label">Player</string>
    <string name="team_name_label">Team</string>
    <string name="team_wins_placeholder">Wins: %1$d</string>
    <string name="team_losses_placeholder">Loses: %1$d</string>

</resources>